MVP実装完了+Dockerイメージ作成
